--- a/schedule/src/app/part/layout/layout.component.html
+++ b/schedule/src/app/part/layout/layout.component.html
@@ -1,3 +1,18 @@
-<div>
-  <app-header></app-header>
+<div class="container-fluid">
+  <div class="row header">
+    <div class="col-md-12 p-0">
+      <app-header></app-header>
+    </div>
+  </div>
+  <div class="row">
+    <div class="menu border-right">
+      <app-menu></app-menu>
+    </div>
+    <div class="content col-10">
+      <app-nav></app-nav>
+      <div class="ml-4 mr-4">
+        页面内容
+      </div>
+    </div>
+  </div>
 </div>
