--- a/schedule/src/app/part/layout/layout.component.html
+++ b/schedule/src/app/part/layout/layout.component.html
@@ -11,7 +11,7 @@
     <div class="content col-10">
       <app-nav></app-nav>
       <div class="ml-4 mr-4">
-        页面内容
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
