--- a/schedule/src/app/part/menu/menu.component.html
+++ b/schedule/src/app/part/menu/menu.component.html
@@ -1,9 +1,9 @@
 <ul class="menu">
   <li *ngFor="let menu of menus" class="border-bottom">
-    <a href="#">
+    <a href="{{ menu.url }}">
       <div class="inner">
-        <i [className]="'icon ' + menu.icon"></i>
         <span>{{ menu.name }}</span>
+        <span>{{ menu.url }}</span>
       </div>
     </a>
   </li>
