--- a/schedule/src/app/term/term.component.html
+++ b/schedule/src/app/term/term.component.html
@@ -26,14 +26,12 @@
   <tr *ngFor="let term of pageData.content, index as index">
     <td>{{ index + 1 }}</td>
     <td>{{ term.name }}</td>
-    <td>{{ (+term.start_time) * 1000 | date: 'yyyy-MM-dd'}}</td>
-    <td>{{ (+term.end_time) * 1000 | date: 'yyyy-MM-dd'}}</td>
-    <td><span class="badge" [ngClass]="{ 'badge-primary': term.state, 'badge-secondary': !term.state }">{{ term.state }}</span></td>
+    <td>{{ (+term.startTime) * 1000 | date: 'yyyy-MM-dd'}}</td>
+    <td>{{ (+term.endTime) * 1000 | date: 'yyyy-MM-dd'}}</td>
+    <td><span class="badge" [ngClass]="{ 'badge-primary': term.state, 'badge-secondary': !term.state }">{{ term.state | termState }}</span></td>
     <td>
       <a class="btn btn-sm btn-primary">编辑</a>
-      &nbsp;
       <a class="btn btn-sm btn-danger">删除</a>
-      &nbsp;
       <a class="btn btn-sm btn-success col-md-2">激活</a>
     </td>
   </tr>
@@ -41,4 +39,5 @@
 </table>
 <app-page [page]="pageData.number"
           [size]="pageData.size"
-          [totalElements]="pageData.totalElements"></app-page>
+          [totalElements]="pageData.totalElements"
+          (changePage)="onPageChange($event)"></app-page>
