--- a/schedule/src/app/teacher/teacher.component.html
+++ b/schedule/src/app/teacher/teacher.component.html
@@ -1,1 +1,42 @@
-<p>teacher works!</p>
+<!--查询和添加-->
+<div class="row">
+  <div class="col-md-10">
+    <form class="form-inline">
+      <input type="text" class="form-control" style="margin-right: 10px" placeholder="名称" formControlName="name">
+      <input type="text" class="form-control" style="margin-right: 10px" placeholder="手机号" formControlName="name">
+      <button type="submit" class="btn btn-info"><i class="fas fa-search"></i>查询</button>
+    </form>
+  </div>
+  <div class="col-md-2">
+    <a class="btn btn-primary mr-2" style="float: right" [routerLink]="'/teacher/add'"><i class="fas fa-plus"></i>新增</a>
+  </div>
+</div>
+<app-size [size]="pageData.size" (changeSize)="onSizeChange($event)"></app-size><br>
+<table class="table table-striped mt-3">
+  <thead class="table-primary">
+  <tr class="info">
+    <th>序号</th>
+    <th>姓名</th>
+    <th>性别</th>
+    <th>手机号</th>
+    <th>操作</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let teacher of pageData.content, index as index">
+    <td>{{ index + 1 }}</td>
+    <td>{{ teacher.name }}</td>
+    <td>{{ teacher.sex }}</td>
+    <td>{{ teacher.phone }}</td>
+    <td>
+      <a class="btn btn-sm btn-primary" [routerLink]="'/teacher/edit/' + teacher.id">编辑</a>
+      &nbsp;
+      <a class="btn btn-sm btn-danger">删除</a>
+    </td>
+  </tr>
+  </tbody>
+</table>
+<app-page [page]="pageData.number"
+          [size]="pageData.size"
+          [totalElements]="pageData.totalElements"
+          (changePage)="onPageChange($event)"></app-page>
