teacher delete search

--- a/schedule/src/app/part/menu/menu.component.html
+++ b/schedule/src/app/part/menu/menu.component.html
@@ -1,6 +1,6 @@
 <ul class="menu">
   <li *ngFor="let menu of menus" class="border-bottom">
-    <a href="{{ menu.url }}">
+    <a routerLink="{{ menu.url }}">
       <div class="inner">
         <span>{{ menu.name }}</span>
         <span>{{ menu.url }}</span>
