--- a/schedule/src/app/room/room.component.html
+++ b/schedule/src/app/room/room.component.html
@@ -1,1 +1,40 @@
-<p>room works!</p>
+<!--查询和添加-->
+<div class="row">
+  <div class="col-md-10">
+    <form class="form-inline" (submit)="onSubmit(queryForm)" [formGroup]="queryForm">
+      <input type="text" class="form-control" style="margin-right: 10px" placeholder="名称" formControlName="searchName">
+      <input type="text" class="form-control" style="margin-right: 10px" placeholder="容量" formControlName="searchCapacity">
+      <button type="submit" class="btn btn-info"><i class="fas fa-search"></i>查询</button>
+    </form>
+  </div>
+  <div class="col-md-2">
+    <a class="btn btn-primary mr-2" style="float: right" [routerLink]="'/room/add'"><i class="fas fa-plus"></i>新增</a>
+  </div>
+</div>
+<app-size [size]="pageData.size" (changeSize)="onSizeChange($event)"></app-size><br>
+<table class="table table-striped mt-3">
+  <thead class="table-primary">
+  <tr class="info">
+    <th>序号</th>
+    <th>名称</th>
+    <th>容量</th>
+    <th>操作</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let room of pageData.content, index as index">
+    <td>{{ index + 1 }}</td>
+    <td>{{ room.name }}</td>
+    <td>{{ room.capacity }}</td>
+    <td>
+      <a class="btn btn-sm btn-primary" [routerLink]="'/room/edit/' + room.id">编辑</a>
+      &nbsp;
+      <a class="btn btn-sm btn-danger" (click)="onDelete(room.id)">删除</a>
+    </td>
+  </tr>
+  </tbody>
+</table>
+<app-page [page]="pageData.number"
+          [size]="pageData.size"
+          [totalElements]="pageData.totalElements"
+          (changePage)="onPageChange($event)"></app-page>
