--- a/schedule/src/app/clazz/clazz.component.html
+++ b/schedule/src/app/clazz/clazz.component.html
@@ -1,1 +1,45 @@
-<p>clazz works!</p>
+<form (submit)="onSubmit(queryForm)" [formGroup]="queryForm">
+  <div class="form-row justify-content-between">
+    <div class="form-group col-md-3">
+      <input type="text" class="form-control" formControlName="name" placeholder="班级名称">
+    </div>
+    <div class="form-group col-md-9 text-left align-self-end">
+      <button type="submit" class="btn btn-info"><i class="fas fa-search"></i> 查询</button>
+    </div>
+  </div>
+</form>
+<hr>
+<div class="row mb-2">
+  <div class="col-6 text-left">
+    <app-size [size]="pageData.size" (changeSize)="onSizeChange($event)"></app-size>
+  </div>
+  <div class="col-6 text-right">
+    <a class="btn btn-primary" routerLink="add"><i class="fas fa-plus"></i>新增</a>
+  </div>
+</div>
+<table class="table table-striped mt-3">
+  <thead class="table-primary">
+  <tr class="info">
+    <th>序号</th>
+    <th>名称</th>
+    <th>入学日期</th>
+    <th>操作</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let clazz of pageData.content, index as index">
+    <td>{{ index + 1 }}</td>
+    <td>{{ clazz.name }}</td>
+    <td>{{ +clazz.entranceDate * 1000 | date: 'yyyy-MM-dd'}}</td>
+    <td>
+      <a class="btn btn-sm btn-success" [routerLink]="'members/' + clazz.id">查看班级成员</a>
+      <a class="btn btn-sm btn-primary" [routerLink]="'edit/' + clazz.id">编辑</a>
+      <a class="btn btn-sm btn-danger" (click)="onDelete(clazz)">删除</a>
+    </td>
+  </tr>
+  </tbody>
+</table>
+<app-page [page]="pageData.number"
+          [size]="pageData.size"
+          [totalElements]="pageData.totalElements"
+          (changePage)="onPageChange($event)"></app-page>
