--- a/schedule/src/app/clazz/members/members.component.html
+++ b/schedule/src/app/clazz/members/members.component.html
@@ -1,10 +1,10 @@
 <form (submit)="onSubmit(queryForm)" [formGroup]="queryForm">
   <div class="form-row justify-content-between">
     <div class="form-group col-md-3">
-      <input type="text" class="form-control" formControlName="name" placeholder="学期名称">
+      <input type="text" class="form-control" formControlName="name" placeholder="班级名称">
     </div>
     <div class="form-group col-md-9 text-left align-self-end">
-      <button type="submit" class="btn btn-info"><i class="fas fa-search"></i> 查询</button>
+      <button type="submit" class="btn btn-info"><i class="fas fa-search"></i>查询</button>
     </div>
   </div>
 </form>
@@ -21,24 +21,23 @@
   <thead class="table-primary">
   <tr class="info">
     <th>序号</th>
-    <th>名称</th>
-    <th>开始日期</th>
-    <th>结束日期</th>
-    <th>状态</th>
+    <th>姓名</th>
+    <th>性别</th>
+    <th>学号</th>
+    <th>班级</th>
     <th>操作</th>
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let term of pageData.content, index as index">
+  <tr *ngFor="let student of pageData.content, index as index">
     <td>{{ index + 1 }}</td>
-    <td>{{ term.name }}</td>
-    <td>{{ +term.startTime * 1000 | date: 'yyyy-MM-dd'}}</td>
-    <td>{{ +term.endTime * 1000 | date: 'yyyy-MM-dd'}}</td>
-    <td><span class="badge" [ngClass]="{ 'badge-primary': term.state, 'badge-secondary': !term.state }">{{ term.state | termState }}</span></td>
+    <td>{{ student.name }}</td>
+    <td>{{ student.sex | sex}}</td>
+    <td>{{ student.sno }}</td>
+    <td>{{ student.clazz?.name }}</td>
     <td>
-      <a class="btn btn-sm btn-primary" [routerLink]="'edit/' + term.id">编辑</a>
-      <a class="btn btn-sm btn-danger" (click)="onDelete(term)">删除</a>
-      <a class="btn btn-sm btn-success col-md-2" (click)="active(term)">激活</a>
+      <a class="btn btn-sm btn-primary" [routerLink]="'edit/' + student.id">编辑</a>
+      <a class="btn btn-sm btn-danger" (click)="onDelete(student)">删除</a>
     </td>
   </tr>
   </tbody>
