--- a/schedule/src/app/teacher/teacher.component.html
+++ b/schedule/src/app/teacher/teacher.component.html
@@ -26,7 +26,7 @@
   <tr *ngFor="let teacher of pageData.content, index as index">
     <td>{{ index + 1 }}</td>
     <td>{{ teacher.name }}</td>
-    <td>{{ teacher.sex }}</td>
+    <td>{{ teacher.sex | sex}}</td>
     <td>{{ teacher.phone }}</td>
     <td>
       <a class="btn btn-sm btn-primary" [routerLink]="'/teacher/edit/' + teacher.id">编辑</a>
