--- a/schedule/src/app/term/edit/edit.component.html
+++ b/schedule/src/app/term/edit/edit.component.html
@@ -1,6 +1,6 @@
 <form class="container-sm"  [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup)">
   <div class="mb-3 row">
-    <label for="name" class="col-3 text-right col-form-label">姓名<code>*</code></label>
+    <label for="name" class="col-3 text-right col-form-label">名称<code>*</code></label>
     <div class="col-7">
       <input type="text" class="form-control" id="name" formControlName="name">
       <small class="text-danger" *ngIf="formGroup.get('name')!.touched && formGroup.get('name')!.invalid ">
