--- a/schedule/src/app/part/header/header.component.html
+++ b/schedule/src/app/part/header/header.component.html
@@ -5,7 +5,7 @@
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="nav-link small" href="personal">
+        <a class="nav-link small" [routerLink]="'personal'">
           <span class="font-weight-light">欢迎您&nbsp;&nbsp;</span>
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
