--- a/schedule/src/app/clazz/members/members.component.html
+++ b/schedule/src/app/clazz/members/members.component.html
@@ -1,10 +1,16 @@
 <form (submit)="onSubmit(queryForm)" [formGroup]="queryForm">
   <div class="form-row justify-content-between">
     <div class="form-group col-md-3">
-      <input type="text" class="form-control" formControlName="name" placeholder="班级名称">
+      <input type="text" class="form-control" formControlName="name" placeholder="学生名称">
     </div>
-    <div class="form-group col-md-9 text-left align-self-end">
+    <div class="form-group col-md-3">
+      <input type="text" class="form-control" formControlName="sno" placeholder="学号">
+    </div>
+    <div class="form-group col-md-3 text-left align-self-end">
       <button type="submit" class="btn btn-info"><i class="fas fa-search"></i>查询</button>
+    </div>
+    <div class="col-3 text-right">
+      <a class="btn btn-primary" routerLink="add"><i class="fas fa-plus"></i>新增</a>
     </div>
   </div>
 </form>
@@ -12,9 +18,6 @@
 <div class="row mb-2">
   <div class="col-6 text-left">
     <app-size [size]="pageData.size" (changeSize)="onSizeChange($event)"></app-size>
-  </div>
-  <div class="col-6 text-right">
-    <a class="btn btn-primary" routerLink="add"><i class="fas fa-plus"></i>新增</a>
   </div>
 </div>
 <table class="table table-striped mt-3">
