--- a/schedule/src/app/room/edit/edit.component.html
+++ b/schedule/src/app/room/edit/edit.component.html
@@ -1,4 +1,4 @@
-<body class="container" [formGroup]="formGroup" style="margin-left: 500px">
+<body class="container" [formGroup]="formGroup!" style="margin-left: 500px">
 <form style="margin-top: 20px">
   <div class="form-group row">
     <label class="col-sm-1 col-form-label"><code>*</code>姓名</label>
@@ -21,7 +21,7 @@
   </div>
   <div class="form-group row">
     <div class="col-sm-10">
-      <button type="submit" class="btn btn-primary" [disabled]="!formGroup.get('name')?.value || !formGroup.get('capacity')?.value" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
+      <button type="submit" class="btn btn-primary" [disabled]="!formGroup!.get('name')?.value || !formGroup!.get('capacity')?.value" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
       <a [routerLink]="'/room'" class="btn btn-primary">返回</a>
     </div>
   </div>
