--- a/schedule/src/app/student/student.component.html
+++ b/schedule/src/app/student/student.component.html
@@ -1,1 +1,51 @@
-<p>student works!</p>
+<form (submit)="onSubmit(queryForm)" [formGroup]="queryForm">
+  <div class="form-row justify-content-between">
+    <div class="form-group col-md-3">
+      <input type="text" class="form-control" formControlName="name" placeholder="学生名称">
+    </div>
+    <div class="form-group col-md-3">
+      <input type="text" class="form-control" formControlName="sno" placeholder="学号">
+    </div>
+    <div class="form-group col-md-3 text-left align-self-end">
+      <button type="submit" class="btn btn-info"><i class="fas fa-search"></i>查询</button>
+    </div>
+    <div class="col-3 text-right">
+      <a class="btn btn-primary" routerLink="add"><i class="fas fa-plus"></i>新增</a>
+    </div>
+  </div>
+</form>
+<hr>
+<div class="row mb-2">
+  <div class="col-6 text-left">
+    <app-size [size]="pageData.size" (changeSize)="onSizeChange($event)"></app-size>
+  </div>
+</div>
+<table class="table table-striped mt-3">
+  <thead class="table-primary">
+  <tr class="info">
+    <th>序号</th>
+    <th>姓名</th>
+    <th>性别</th>
+    <th>学号</th>
+    <th>班级</th>
+    <th>操作</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let student of pageData.content, index as index">
+    <td>{{ index + 1 }}</td>
+    <td>{{ student.name }}</td>
+    <td>{{ student.sex | sex}}</td>
+    <td>{{ student.sno }}</td>
+    <td>{{ student.clazz?.name }}</td>
+    <td>
+      <a class="btn btn-sm btn-primary" [routerLink]="'edit/' + student.id">编辑</a>
+      <a class="btn btn-sm btn-danger" (click)="onDelete(student)">删除</a>
+    </td>
+  </tr>
+  </tbody>
+</table>
+<app-page [page]="pageData.number"
+          [size]="pageData.size"
+          [totalElements]="pageData.totalElements"
+          (changePage)="onPageChange($event)"></app-page>
