--- a/schedule/src/app/student/add/add.component.html
+++ b/schedule/src/app/student/add/add.component.html
@@ -1,44 +1,47 @@
+<body class="container" style="margin-left: 300px; margin-top: 20px">
 <form class="container-sm"  [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup)">
-  <div class="mb-3 row">
+  <div class="form-group row">
     <label for="name" class="col-3 text-right col-form-label"><code>*</code>名称</label>
     <div class="col-7">
-      <input type="text" class="form-control" id="name" formControlName="name">
+      <input type="text" class="form-control" style="width: 200px" id="name" formControlName="name">
       <small class="text-danger" *ngIf="formGroup.get('name')!.touched && formGroup.get('name')!.invalid ">
         <span *ngIf="!formGroup.get('name')?.errors?.studentNameUnique">格式不正确</span>
         <span *ngIf="formGroup.get('name')?.errors?.studentNameUnique">学生名已存在</span>
       </small>
     </div>
   </div>
-  <div class="mb-3 row">
+  <div class="form-group row">
     <label for="sno" class="col-3 text-right col-form-label"><code>*</code>学号</label>
     <div class="col-7">
-      <input type="text" class="form-control" id="sno" formControlName="sno">
+      <input type="text" class="form-control" style="width: 200px" id="sno" formControlName="sno">
       <small class="text-danger" *ngIf="formGroup.get('sno')!.touched && formGroup.get('sno')!.invalid ">
         <span *ngIf="!formGroup.get('sno')?.errors?.snoUnique">格式不正确</span>
         <span *ngIf="formGroup.get('sno')?.errors?.snoUnique">学号已存在</span>
       </small>
     </div>
   </div>
-  <div class="mb-3 row">
+  <div class="form-group row">
     <label for="clazz" class="col-3 text-right col-form-label"><code>*</code>班级</label>
     <div class="col-7">
       <app-clazz-select formControlName="clazzId" id="clazz"></app-clazz-select>
     </div>
   </div>
-  <div class="mb-3 row">
+  <div class="form-group row">
     <label class="col-3 text-right col-form-label"><code>*</code>性别</label>
-    <div class="col-7">
+    <div class="col-7" style="margin-top: 6px">
       <input [value]="true" type="radio"  name="sex" id="sex1"formControlName="sex">
       <label for="sex1">男</label> &nbsp;
       <input [value]="false" type="radio" name="sex" id="sex2" formControlName="sex">
       <label for="sex2">女</label>
     </div>
   </div>
-  <div class="mb-3 row">
-    <div class="col-sm-10 offset-5">
+  <div class="mb-3 row" style="margin-left: 90px">
+    <div class="col-sm-10 offset-3">
       <button class="btn btn-primary" [disabled]="formGroup.invalid">
         <i class="fas fa-save"></i>保存
       </button>
+      <a routerLink="../" class="btn btn-primary">返回</a>
     </div>
   </div>
 </form>
+</body>
