--- a/schedule/src/app/course/course.component.html
+++ b/schedule/src/app/course/course.component.html
@@ -8,11 +8,15 @@
     </form>
   </div>
   <div class="col-md-2">
-    <a class="btn btn-primary mr-2" style="float: right" [routerLink]="'/course/add'"><i class="fas fa-plus"></i>新增</a>
+    <a class="btn btn-primary mr-2" style="float: right" routerLink="add"><i class="fas fa-plus"></i>新增</a>
   </div>
 </div>
 <hr/>
-<app-size [size]="pageData.size" (changeSize)="onSizeChange($event)"></app-size><br>
+<div class="row mb-2">
+  <div class="col-6 text-left">
+    <app-size [size]="pageData.size" (changeSize)="onSizeChange($event)"></app-size>
+  </div>
+</div>
 <table class="table table-striped mt-3">
   <thead class="table-primary">
   <tr class="info">
@@ -29,7 +33,6 @@
     <td>{{ course.hours }}</td>
     <td>
       <a class="btn btn-sm btn-primary" [routerLink]="'/course/edit/' + course.id">编辑</a>
-      &nbsp;
       <a class="btn btn-sm btn-danger" (click)="onDelete(course.id)">删除</a>
     </td>
   </tr>
