--- a/schedule/src/app/course/edit/edit.component.html
+++ b/schedule/src/app/course/edit/edit.component.html
@@ -1,7 +1,7 @@
 <body class="container" [formGroup]="formGroup" style="margin-left: 500px">
 <form style="margin-top: 20px">
   <div class="form-group row">
-    <label class="col-sm-1 col-form-label"><code>*</code>姓名</label>
+    <label class="col-sm-1 text-right col-form-label"><code>*</code>姓名</label>
     <div class="col-sm-4">
       <input type="text" class="form-control" style="width: 200px" formControlName="name">
       <!--      <small class="text-danger" *ngIf="formGroup.get('name')?.invalid">-->
@@ -10,7 +10,7 @@
     </div>
   </div>
   <div class="form-group row">
-    <label class="col-sm-1 col-form-label"><code>*</code>学时</label>
+    <label class="col-sm-1 text-right col-form-label"><code>*</code>学时</label>
     <div class="col-sm-4">
       <input type="text" class="form-control" style="width: 200px" formControlName="hours" appValidatorClass>
       <!--      <small class="text-danger" *ngIf="formGroup.get('number')?.errors">-->
@@ -19,7 +19,7 @@
       <!--      </small>-->
     </div>
   </div>
-  <div class="form-group row">
+  <div class="form-group row" style="margin-left: 143px">
     <div class="col-sm-10">
       <button type="submit" class="btn btn-primary" [disabled]="!formGroup.get('name')?.value || !formGroup.get('hours')?.value" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
       <a [routerLink]="'/course'" class="btn btn-primary">返回</a>
