--- a/schedule/src/app/part/header/header.component.html
+++ b/schedule/src/app/part/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark shadow header" style="background-color: darkcyan;">
-  <a class="navbar-brand pl-5" href="#">
+  <a class="navbar-brand pl-5" [routerLink]="'dashboard'">
     {{ this.title }}
   </a>
   <div class="collapse navbar-collapse">
