--- a/schedule/src/app/teacher/add/add.component.html
+++ b/schedule/src/app/teacher/add/add.component.html
@@ -1,7 +1,7 @@
 <body class="container" [formGroup]="formGroup" style="margin-left: 500px">
 <form style="margin-top: 20px">
   <div class="form-group row">
-    <label class="col-sm-1 col-form-label"><code>*</code>姓名</label>
+    <label class="col-sm-1 text-right col-form-label"><code>*</code>姓名</label>
     <div class="col-sm-4">
       <input type="text" class="form-control" style="width: 200px" formControlName="name">
 <!--      <small class="text-danger" *ngIf="formGroup.get('name')?.invalid">-->
@@ -10,14 +10,14 @@
     </div>
   </div>
   <div class="form-group row">
-    <label class="col-sm-1 col-form-label"><code>*</code>性别</label>
-    <div class="col-sm-4">
+    <label class="col-sm-1 text-right col-form-label"><code>*</code>性别</label>
+    <div class="col-sm-4" style="margin-top: 6px">
       <input type="radio" name="sex" formControlName="sex" [value]="0" id="sex0" /><label>男</label>&nbsp;&nbsp;&nbsp;
       <input type="radio" name="sex" formControlName="sex" [value]="1" id="sex1" /><label>女</label>
     </div>
   </div>
   <div class="form-group row">
-    <label class="col-sm-1 col-form-label"><code>*</code>手机号</label>
+    <label class="col-sm-1 text-right col-form-label"><code>*</code>手机号</label>
     <div class="col-sm-4">
       <input type="text" class="form-control" formControlName="phone" style="width: 200px" appValidatorClass>
 <!--      <small class="text-danger" *ngIf="formGroup.get('number')?.errors">-->
@@ -26,10 +26,10 @@
 <!--      </small>-->
     </div>
   </div>
-  <div class="form-group row">
+  <div class="form-group row" style="margin-left: 143px">
     <div class="col-sm-10">
       <button type="submit" class="btn btn-primary" [disabled]="!formGroup.get('name')?.value || !formGroup.get('phone')?.value" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
-      <a [routerLink]="'/teacher'" class="btn btn-primary">返回</a>
+      <a routerLink="../" class="btn btn-primary">返回</a>
     </div>
   </div>
 </form>
