--- a/schedule/src/app/term/add/add.component.html
+++ b/schedule/src/app/term/add/add.component.html
@@ -1,22 +1,23 @@
+<body class="container" style="margin-left: 300px; margin-top: 20px">
 <form class="container-sm"  [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup)">
-  <div class="mb-3 row">
+  <div class="form-group row">
     <label for="name" class="col-3 text-right col-form-label"><code>*</code>名称</label>
     <div class="col-7">
-      <input type="text" class="form-control" id="name" formControlName="name">
+      <input type="text" class="form-control" style="width: 200px" id="name" formControlName="name">
       <small class="text-danger" *ngIf="formGroup.get('name')!.touched && formGroup.get('name')!.invalid ">
         <span *ngIf="!formGroup.get('name')?.errors?.termNameUnique">格式不正确</span>
         <span *ngIf="formGroup.get('name')?.errors?.termNameUnique">学期名已存在</span>
       </small>
     </div>
   </div>
-  <div class="mb-3 row">
+  <div class="form-group row">
     <label for="startTime" class="col-3 text-right col-form-label"><code>*</code>开始时间</label>
     <div class="col-7">
       <app-date formControlName="startTime" id="startTime"></app-date>
     </div>
   </div>
 
-  <div class="mb-3 row">
+  <div class="form-group row">
     <label for="endTime" class="col-3 text-right col-form-label"><code>*</code>结束时间</label>
     <div class="col-7">
       <app-date formControlName="endTime" id="endTime"></app-date>
@@ -29,18 +30,20 @@
 
   <div class="mb-3 row">
     <label class="col-3 text-right col-form-label"><code>*</code>是否激活</label>
-    <div class="col-7">
+    <div class="col-7" style="margin-top: 6px">
       <input [value]="true" type="radio" name="state" id="1" formControlName="state">
       <label for="1">是</label> &nbsp;
       <input [value]="false" type="radio" name="state" id="0" formControlName="state">
       <label for="0">否</label>
     </div>
   </div>
-  <div class="mb-3 row">
-    <div class="col-sm-10 offset-5">
+  <div class="mb-3 row" style="margin-left: 90px">
+    <div class="col-sm-10 offset-3">
       <button class="btn btn-primary" [disabled]="formGroup.invalid || !isTimeRight">
         <i class="fas fa-save"></i>保存
       </button>
+      <a routerLink="../" class="btn btn-primary">返回</a>
     </div>
   </div>
 </form>
+</body>
