--- a/schedule/src/common/data/date.component.html
+++ b/schedule/src/common/data/date.component.html
@@ -1,1 +1,1 @@
-<input type="date" class="form-control" [formControl]="date">
+<input type="date" class="form-control" style="width: 200px" [formControl]="date">
