查看班级成员

--- a/schedule/src/app/part/nav/nav.component.html
+++ b/schedule/src/app/part/nav/nav.component.html
@@ -1,5 +1,6 @@
 <div class="nav">
-  <a href="javascript:void(0);" (click)=Back()><< 后退</a>
+<!--  <a href="javascript:void(0);" (click)=Back()><< 后退</a>-->
+  <a href="./../"><< 后退</a>
   <p>
     当前位置：<span>{{ this.title }}</span>
   </p>
