--- a/schedule/src/app/clazz/add/add.component.html
+++ b/schedule/src/app/clazz/add/add.component.html
@@ -20,6 +20,7 @@
       <button class="btn btn-primary" [disabled]="formGroup.invalid">
         <i class="fas fa-save"></i>保存
       </button>
+      <a [routerLink]="'../'" class="btn btn-primary">返回</a>
     </div>
   </div>
 </form>
