--- a/schedule/src/app/course/add/add.component.html
+++ b/schedule/src/app/course/add/add.component.html
@@ -4,24 +4,23 @@
     <label class="col-sm-1 col-form-label"><code>*</code>姓名</label>
     <div class="col-sm-4">
       <input type="text" class="form-control" style="width: 200px" formControlName="name">
-      <!--      <small class="text-danger" *ngIf="formGroup.get('name')?.invalid">-->
-      <!--        长度应该在2-25之间-->
-      <!--      </small>-->
+      <small class="text-danger" *ngIf="formGroup.get('name')!.touched && formGroup.get('name')!.invalid ">
+        <span>格式不正确</span>
+      </small>
     </div>
   </div>
   <div class="form-group row">
     <label class="col-sm-1 col-form-label"><code>*</code>学时</label>
     <div class="col-sm-4">
-      <input type="text" class="form-control" formControlName="hours" style="width: 200px" appValidatorClass>
-      <!--      <small class="text-danger" *ngIf="formGroup.get('number')?.errors">-->
-      <!--        <ng-container *ngIf="formGroup.get('number')?.errors?.isPhoneNumber">手机号格式错误</ng-container>-->
-      <!--        <ng-container *ngIf="formGroup.get('number')?.errors?.numberUnique">该手机号已存在</ng-container>-->
-      <!--      </small>-->
+      <input type="text" class="form-control" formControlName="hours" style="width: 200px">
+      <small class="text-danger" *ngIf="formGroup.get('hours')!.touched && formGroup.get('hours')!.invalid ">
+        <span>格式不正确</span>
+      </small>
     </div>
   </div>
   <div class="form-group row">
     <div class="col-sm-10">
-      <button type="submit" class="btn btn-primary" [disabled]="!formGroup.get('name')?.value || !formGroup.get('hours')?.value" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
+      <button type="submit" class="btn btn-primary" [disabled]="formGroup.invalid" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
       <a [routerLink]="'/course'" class="btn btn-primary">返回</a>
     </div>
   </div>
