--- a/schedule/src/app/term/edit/edit.component.html
+++ b/schedule/src/app/term/edit/edit.component.html
@@ -41,6 +41,7 @@
       <button class="btn btn-primary" [disabled]="formGroup.invalid || !isTimeRight">
         <i class="fas fa-save"></i>保存
       </button>
+      <a [routerLink]="'../../'" class="btn btn-primary">返回</a>
     </div>
   </div>
 </form>
