--- a/schedule/src/app/schedule/schedule.component.html
+++ b/schedule/src/app/schedule/schedule.component.html
@@ -1,1 +1,45 @@
-<p>schedule works!</p>
+<!--查询和添加-->
+<div class="row">
+  <div class="col-md-10">
+    <form class="form-inline">
+      <input type="text" class="form-control" style="margin-right: 10px" placeholder="课程名称">
+      <input type="text" class="form-control" style="margin-right: 10px" placeholder="学期名称">
+      <button type="submit" class="btn btn-info"><i class="fas fa-search"></i>查询</button>
+    </form>
+  </div>
+  <div class="col-md-2">
+    <a class="btn btn-primary mr-2" style="float: right" routerLink="add"><i class="fas fa-plus"></i>新增</a>
+  </div>
+</div>
+<hr/>
+<div class="row mb-2">
+  <div class="col-6 text-left">
+    <app-size></app-size>
+  </div>
+</div>
+<table class="table table-striped mt-3">
+  <thead class="table-primary">
+  <tr class="info">
+    <th>序号</th>
+    <th>课程名称</th>
+    <th>学期名称</th>
+    <th>班级</th>
+    <th>教师</th>
+    <th>操作</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td>1</td>
+    <td>计算机组成原理</td>
+    <td>2023春季</td>
+    <td>计科221</td>
+    <td>张三、李四</td>
+    <td>
+      <a class="btn btn-sm btn-primary">编辑</a>
+      <a class="btn btn-sm btn-danger">删除</a>
+    </td>
+  </tr>
+  </tbody>
+</table>
+<app-page></app-page>
