--- a/schedule/src/app/clazz/edit/edit.component.html
+++ b/schedule/src/app/clazz/edit/edit.component.html
@@ -1,26 +1,28 @@
-<form class="container-sm"  [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup)">
-  <div class="mb-3 row">
-    <label for="name" class="col-3 text-right col-form-label"><code>*</code>名称</label>
-    <div class="col-7">
-      <input type="text" class="form-control" id="name" formControlName="name">
+<body class="container offset-4 mt-sm-5">
+<form [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup)">
+  <div class="form-group row">
+    <label for="name" class="col-sm-2 text-right col-form-label"><code>*</code>名称</label>
+    <div class="col-sm-4">
+      <input type="text" style="width: 153px;" class="form-control" id="name" formControlName="name">
       <small class="text-danger" *ngIf="formGroup.get('name')!.touched && formGroup.get('name')!.invalid ">
         <span *ngIf="!formGroup.get('name')?.errors?.clazzNameUnique">格式不正确</span>
         <span *ngIf="formGroup.get('name')?.errors?.clazzNameUnique">班级名已存在</span>
       </small>
     </div>
   </div>
-  <div class="mb-3 row">
-    <label for="entranceDate" class="col-3 text-right col-form-label"><code>*</code>开学日期</label>
-    <div class="col-7">
+  <div class="form-group row">
+    <label for="entranceDate" class="col-sm-2 text-right col-form-label"><code>*</code>开学日期</label>
+    <div class="col-sm-4">
       <app-date formControlName="entranceDate" id="entranceDate"></app-date>
     </div>
   </div>
-  <div class="mb-3 row">
-    <div class="col-sm-10 offset-5">
-      <button class="btn btn-primary" [disabled]="formGroup.invalid">
+  <div class="form-group row">
+    <div class="col-sm-4">
+      <a style="float: right" [routerLink]="'../../'" class="btn btn-primary">返回</a>
+      <button style="float: right" class="btn btn-primary" [disabled]="formGroup.invalid">
         <i class="fas fa-save"></i>保存
       </button>
-      <a [routerLink]="'../../'" class="btn btn-primary">返回</a>
     </div>
   </div>
 </form>
+</body>
