--- a/schedule/src/app/course/course.component.html
+++ b/schedule/src/app/course/course.component.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-10">
     <form class="form-inline" (submit)="onSubmit(queryForm)" [formGroup]="queryForm">
-      <input type="text" class="form-control" style="margin-right: 10px" placeholder="名称" formControlName="searchName">
+      <input type="text" class="form-control" style="margin-right: 10px" placeholder="课程名称" formControlName="searchName">
       <input type="text" class="form-control" style="margin-right: 10px" placeholder="学时" formControlName="searchHours">
       <button type="submit" class="btn btn-info"><i class="fas fa-search"></i>查询</button>
     </form>
