--- a/schedule/src/app/course/edit/edit.component.html
+++ b/schedule/src/app/course/edit/edit.component.html
@@ -1,27 +1,27 @@
-<body class="container" [formGroup]="formGroup" style="margin-left: 500px">
-<form style="margin-top: 20px">
+<body class="container offset-4 mt-sm-5">
+<form [formGroup]="formGroup">
   <div class="form-group row">
-    <label class="col-sm-1 col-form-label"><code>*</code>姓名</label>
+    <label class="col-sm-2 text-right col-form-label"><code>*</code>姓名</label>
     <div class="col-sm-4">
-      <input type="text" class="form-control" style="width: 200px" formControlName="name">
+      <input type="text" class="form-control" style="width: 153px" formControlName="name">
       <small class="text-danger" *ngIf="formGroup.get('name')!.touched && formGroup.get('name')!.invalid ">
         <span>格式不正确</span>
       </small>
     </div>
   </div>
   <div class="form-group row">
-    <label class="col-sm-1 col-form-label"><code>*</code>学时</label>
+    <label class="col-sm-2 text-right col-form-label"><code>*</code>学时</label>
     <div class="col-sm-4">
-      <input type="text" class="form-control" style="width: 200px" formControlName="hours">
+      <input type="text" class="form-control" style="width: 153px" formControlName="hours">
       <small class="text-danger" *ngIf="formGroup.get('hours')!.touched && formGroup.get('hours')!.invalid ">
         <span>格式不正确</span>
       </small>
     </div>
   </div>
   <div class="form-group row">
-    <div class="col-sm-10">
-      <button type="submit" class="btn btn-primary" [disabled]="formGroup.invalid" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
-      <a [routerLink]="'/course'" class="btn btn-primary">返回</a>
+    <div class="col-sm-4">
+      <a style="float: right" [routerLink]="'/course'" class="btn btn-primary">返回</a>
+      <button style="float: right" type="submit" class="btn btn-primary" [disabled]="!formGroup.get('name')?.value || !formGroup.get('hours')?.value" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
     </div>
   </div>
 </form>
