--- a/schedule/src/app/student/edit/edit.component.html
+++ b/schedule/src/app/student/edit/edit.component.html
@@ -1,45 +1,47 @@
-<form class="container-sm"  [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup)">
-  <div class="mb-3 row">
-    <label for="name" class="col-3 text-right col-form-label"><code>*</code>名称</label>
-    <div class="col-7">
-      <input type="text" class="form-control" id="name" formControlName="name">
+<body class="container offset-4 mt-sm-5">
+<form [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup)">
+  <div class="form-group row">
+    <label for="name" class="col-sm-2 text-right col-form-label"><code>*</code>姓名</label>
+    <div class="col-sm-4">
+      <input type="text" style="width: 153px" class="form-control" id="name" formControlName="name">
       <small class="text-danger" *ngIf="formGroup.get('name')!.touched && formGroup.get('name')!.invalid ">
         <span *ngIf="!formGroup.get('name')?.errors?.studentNameUnique">格式不正确</span>
         <span *ngIf="formGroup.get('name')?.errors?.studentNameUnique">学生名已存在</span>
       </small>
     </div>
   </div>
-  <div class="mb-3 row">
-    <label for="sno" class="col-3 text-right col-form-label"><code>*</code>学号</label>
-    <div class="col-7">
-      <input type="text" class="form-control" id="sno" formControlName="sno">
+  <div class="form-group row">
+    <label class="col-sm-2 text-right col-form-label"><code>*</code>性别</label>
+    <div class="col-sm-4 mt-2">
+      <input [value]="false" type="radio"  name="sex" id="sex1"formControlName="sex">
+      <label for="sex1">男</label> &nbsp;
+      <input [value]="true" type="radio" name="sex" id="sex2" formControlName="sex">
+      <label for="sex2">女</label>
+    </div>
+  </div>
+  <div class="form-group row">
+    <label for="sno" class="col-sm-2 text-right col-form-label"><code>*</code>学号</label>
+    <div class="col-sm-4">
+      <input type="text" style="width: 153px" class="form-control" id="sno" formControlName="sno">
       <small class="text-danger" *ngIf="formGroup.get('sno')!.touched && formGroup.get('sno')!.invalid ">
         <span *ngIf="!formGroup.get('sno')?.errors?.snoUnique">格式不正确</span>
         <span *ngIf="formGroup.get('sno')?.errors?.snoUnique">学号已存在</span>
       </small>
     </div>
   </div>
-  <div class="mb-3 row">
-    <label for="clazz" class="col-3 text-right col-form-label"><code>*</code>班级</label>
-    <div class="col-7">
+  <div class="form-group row">
+    <label for="clazz" class="col-sm-2 text-right col-form-label"><code>*</code>班级</label>
+    <div class="col-sm-4">
       <app-clazz-select formControlName="clazzId" id="clazz"></app-clazz-select>
     </div>
   </div>
-  <div class="mb-3 row">
-    <label class="col-3 text-right col-form-label"><code>*</code>性别</label>
-    <div class="col-7">
-      <input [value]="true" type="radio"  name="sex" id="sex1"formControlName="sex">
-      <label for="sex1">男</label> &nbsp;
-      <input [value]="false" type="radio" name="sex" id="sex2" formControlName="sex">
-      <label for="sex2">女</label>
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <div class="col-sm-10 offset-5">
-      <button class="btn btn-primary" [disabled]="formGroup.invalid">
+  <div class="form-group row">
+    <div class="col-sm-4">
+      <a style="float: right" [routerLink]="'../../'" class="btn btn-primary">返回</a>
+      <button style="float: right" class="btn btn-primary" [disabled]="formGroup.invalid">
         <i class="fas fa-save"></i>保存
       </button>
-      <a [routerLink]="'../../'" class="btn btn-primary">返回</a>
     </div>
   </div>
 </form>
+</body>
