--- a/schedule/src/app/teacher/add/add.component.html
+++ b/schedule/src/app/teacher/add/add.component.html
@@ -1,25 +1,25 @@
-<body class="container" [formGroup]="formGroup" style="margin-left: 500px">
-<form style="margin-top: 20px">
+<body class="container offset-4 mt-sm-5">
+<form [formGroup]="formGroup">
   <div class="form-group row">
-    <label class="col-sm-1 col-form-label"><code>*</code>姓名</label>
+    <label class="col-sm-2 text-right col-form-label"><code>*</code>姓名</label>
     <div class="col-sm-4">
-      <input type="text" class="form-control" style="width: 200px" formControlName="name">
+      <input type="text" class="form-control" style="width: 153px" formControlName="name">
 <!--      <small class="text-danger" *ngIf="formGroup.get('name')?.invalid">-->
 <!--        长度应该在2-25之间-->
 <!--      </small>-->
     </div>
   </div>
   <div class="form-group row">
-    <label class="col-sm-1 col-form-label"><code>*</code>性别</label>
-    <div class="col-sm-4">
+    <label class="col-sm-2 text-right col-form-label"><code>*</code>性别</label>
+    <div class="col-sm-4 mt-2">
       <input type="radio" name="sex" formControlName="sex" [value]="0" id="sex0" /><label>男</label>&nbsp;&nbsp;&nbsp;
       <input type="radio" name="sex" formControlName="sex" [value]="1" id="sex1" /><label>女</label>
     </div>
   </div>
   <div class="form-group row">
-    <label class="col-sm-1 col-form-label"><code>*</code>手机号</label>
+    <label class="col-sm-2 text-right col-form-label"><code>*</code>手机号</label>
     <div class="col-sm-4">
-      <input type="text" class="form-control" formControlName="phone" style="width: 200px" appValidatorClass>
+      <input type="text" class="form-control" formControlName="phone" style="width: 153px" appValidatorClass>
 <!--      <small class="text-danger" *ngIf="formGroup.get('number')?.errors">-->
 <!--        <ng-container *ngIf="formGroup.get('number')?.errors?.isPhoneNumber">手机号格式错误</ng-container>-->
 <!--        <ng-container *ngIf="formGroup.get('number')?.errors?.numberUnique">该手机号已存在</ng-container>-->
@@ -27,9 +27,9 @@
     </div>
   </div>
   <div class="form-group row">
-    <div class="col-sm-10">
-      <button type="submit" class="btn btn-primary" [disabled]="!formGroup.get('name')?.value || !formGroup.get('phone')?.value" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
-      <a [routerLink]="'/teacher'" class="btn btn-primary">返回</a>
+    <div class="col-sm-4">
+      <a style="float: right" [routerLink]="'/teacher'" class="btn btn-primary">返回</a>
+      <button style="float: right" type="submit" class="btn btn-primary" [disabled]="!formGroup.get('name')?.value || !formGroup.get('phone')?.value" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
     </div>
   </div>
 </form>
