--- a/schedule/src/app/teacher/teacher.component.html
+++ b/schedule/src/app/teacher/teacher.component.html
@@ -2,17 +2,21 @@
 <div class="row">
   <div class="col-md-10">
     <form class="form-inline" (submit)="onSubmit(queryForm)" [formGroup]="queryForm">
-      <input type="text" class="form-control" style="margin-right: 10px" placeholder="名称" formControlName="searchName">
+      <input type="text" class="form-control" style="margin-right: 10px" placeholder="教师姓名" formControlName="searchName">
       <input type="text" class="form-control" style="margin-right: 10px" placeholder="手机号" formControlName="searchPhone">
       <button type="submit" class="btn btn-info"><i class="fas fa-search"></i>查询</button>
     </form>
   </div>
   <div class="col-md-2">
-    <a class="btn btn-primary mr-2" style="float: right" [routerLink]="'/teacher/add'"><i class="fas fa-plus"></i>新增</a>
+    <a class="btn btn-primary mr-2" style="float: right" routerLink="add"><i class="fas fa-plus"></i>新增</a>
   </div>
 </div>
 <hr/>
-<app-size [size]="pageData.size" (changeSize)="onSizeChange($event)"></app-size><br>
+<div class="row mb-2">
+  <div class="col-6 text-left">
+    <app-size [size]="pageData.size" (changeSize)="onSizeChange($event)"></app-size>
+  </div>
+</div>
 <table class="table table-striped mt-3">
   <thead class="table-primary">
   <tr class="info">
