--- a/schedule/src/app/term/term.component.html
+++ b/schedule/src/app/term/term.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-10">
     <form class="form-inline" (submit)="onSubmit(queryForm)" [formGroup]="queryForm">
-      <input type="text" class="form-control" style="margin-right: 10px" formControlName="name" placeholder="学期名称">
+      <input type="text" class="form-control mr-3" formControlName="name" placeholder="学期名称">
         <button type="submit" class="btn btn-info"><i class="fas fa-search"></i> 查询</button>
     </form>
   </div>
