--- a/schedule/src/app/clazz/add/add.component.html
+++ b/schedule/src/app/clazz/add/add.component.html
@@ -1,9 +1,8 @@
-<body class="container offset-4 mt-sm-5">
 <form [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup)">
   <div class="form-group row">
-    <label for="name" class="col-sm-2 text-right col-form-label"><code>*</code>名称</label>
-    <div class="col-sm-4">
-      <input type="text" style="width: 153px;" class="form-control" id="name" formControlName="name">
+    <label for="name" class="col-sm-4 text-right col-form-label"><code>*</code>名称</label>
+    <div class="col-sm-8">
+      <input type="text" class="form-control col-sm-3" id="name" formControlName="name">
       <small class="text-danger" *ngIf="formGroup.get('name')!.touched && formGroup.get('name')!.invalid ">
         <span *ngIf="!formGroup.get('name')?.errors?.clazzNameUnique">格式不正确</span>
         <span *ngIf="formGroup.get('name')?.errors?.clazzNameUnique">班级名已存在</span>
@@ -11,13 +10,13 @@
     </div>
   </div>
   <div class="form-group row">
-    <label for="entranceDate" class="col-sm-2 text-right col-form-label"><code>*</code>开学日期</label>
-    <div class="col-sm-4">
+    <label for="entranceDate" class="col-sm-4 text-right col-form-label"><code>*</code>开学日期</label>
+    <div class="col-sm-8">
       <app-date formControlName="entranceDate" id="entranceDate"></app-date>
     </div>
   </div>
   <div class="form-group row">
-    <div class="col-sm-4">
+    <div class="offset-4">
       <a style="float: right" [routerLink]="'../'" class="btn btn-primary">返回</a>
       <button style="float: right" class="btn btn-primary" [disabled]="formGroup.invalid">
         <i class="fas fa-save"></i>保存
@@ -25,4 +24,3 @@
     </div>
   </div>
 </form>
-</body>
