--- a/schedule/src/app/clazz/clazz.component.html
+++ b/schedule/src/app/clazz/clazz.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-md-10">
     <form class="form-inline" (submit)="onSubmit(queryForm)" [formGroup]="queryForm">
-      <input type="text" class="form-control" style="margin-right: 10px" formControlName="name" placeholder="班级名称">
-      <button type="submit" class="btn btn-info"><i class="fas fa-search"></i> 查询</button>
+      <input type="text" class="form-control" formControlName="name" placeholder="班级名称">
+      <button type="submit" class="btn btn-info ml-3"><i class="fas fa-search"></i> 查询</button>
     </form>
   </div>
-  <div class="col-md-2">
-    <a class="btn btn-primary mr-2" style="float: right" routerLink="add"><i class="fas fa-plus"></i>新增</a>
+  <div class="col-md-2 mr-0 text-right">
+    <a class="btn btn-primary" routerLink="add"><i class="fas fa-plus"></i>新增</a>
   </div>
 </div>
 <hr>
