--- a/schedule/src/app/course/add/add.component.html
+++ b/schedule/src/app/course/add/add.component.html
@@ -1,28 +1,26 @@
-<body class="container offset-4 mt-sm-5">
 <form [formGroup]="formGroup">
   <div class="form-group row">
-    <label class="col-sm-2 text-right col-form-label"><code>*</code>姓名</label>
-    <div class="col-sm-4">
-      <input type="text" class="form-control" style="width: 153px" formControlName="name">
+    <label class="col-sm-4 text-right col-form-label"><code>*</code>姓名</label>
+    <div class="col-sm-8">
+      <input type="text" class="form-control col-3"  formControlName="name">
       <small class="text-danger" *ngIf="formGroup.get('name')!.touched && formGroup.get('name')!.invalid ">
         <span>格式不正确</span>
       </small>
     </div>
   </div>
   <div class="form-group row">
-    <label class="col-sm-2 text-right col-form-label"><code>*</code>学时</label>
-    <div class="col-sm-4">
-      <input type="text" class="form-control" formControlName="hours" style="width: 153px">
+    <label class="col-sm-4 text-right col-form-label"><code>*</code>学时</label>
+    <div class="col-sm-8">
+      <input type="text" class="form-control col-sm-3" formControlName="hours">
       <small class="text-danger" *ngIf="formGroup.get('hours')!.touched && formGroup.get('hours')!.invalid ">
         <span>格式不正确</span>
       </small>
     </div>
   </div>
   <div class="form-group row">
-    <div class="col-sm-4">
+    <div class="offset-4">
       <a style="float: right" [routerLink]="'/course'" class="btn btn-primary">返回</a>
       <button style="float: right" type="submit" class="btn btn-primary" [disabled]="!formGroup.get('name')?.value || !formGroup.get('hours')?.value" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
     </div>
   </div>
 </form>
-</body>
