--- a/schedule/src/app/room/edit/edit.component.html
+++ b/schedule/src/app/room/edit/edit.component.html
@@ -1,18 +1,17 @@
-<body class="container offset-4 mt-sm-5">
 <form [formGroup]="formGroup">
   <div class="form-group row">
-    <label class="col-sm-2 text-right col-form-label"><code>*</code>名称</label>
-    <div class="col-sm-4">
-      <input type="text" class="form-control" style="width: 153px" formControlName="name">
+    <label class="col-sm-4 text-right col-form-label"><code>*</code>名称</label>
+    <div class="col-sm-8">
+      <input type="text" class="form-control col-sm-3" formControlName="name">
       <!--      <small class="text-danger" *ngIf="formGroup.get('name')?.invalid">-->
       <!--        长度应该在2-25之间-->
       <!--      </small>-->
     </div>
   </div>
   <div class="form-group row">
-    <label class="col-sm-2 text-right col-form-label"><code>*</code>容量</label>
-    <div class="col-sm-4">
-      <input type="text" class="form-control" style="width: 153px" formControlName="capacity" appValidatorClass>
+    <label class="col-sm-4 text-right col-form-label"><code>*</code>容量</label>
+    <div class="col-sm-8">
+      <input type="text" class="form-control col-sm-3" formControlName="capacity" appValidatorClass>
       <!--      <small class="text-danger" *ngIf="formGroup.get('number')?.errors">-->
       <!--        <ng-container *ngIf="formGroup.get('number')?.errors?.isPhoneNumber">手机号格式错误</ng-container>-->
       <!--        <ng-container *ngIf="formGroup.get('number')?.errors?.numberUnique">该手机号已存在</ng-container>-->
@@ -20,10 +19,9 @@
     </div>
   </div>
   <div class="form-group row">
-    <div class="col-sm-4">
+    <div class="offset-4">
       <a style="float: right" [routerLink]="'/room'" class="btn btn-primary">返回</a>
       <button style="float: right" type="submit" class="btn btn-primary" [disabled]="!formGroup.get('name')?.value || !formGroup.get('capacity')?.value" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
     </div>
   </div>
 </form>
-</body>
