--- a/schedule/src/app/room/room.component.html
+++ b/schedule/src/app/room/room.component.html
@@ -2,8 +2,8 @@
 <div class="row">
   <div class="col-md-10">
     <form class="form-inline" (submit)="onSubmit(queryForm)" [formGroup]="queryForm">
-      <input type="text" class="form-control" style="margin-right: 10px" placeholder="教室名称" formControlName="searchName">
-      <input type="text" class="form-control" style="margin-right: 10px" placeholder="容量" formControlName="searchCapacity">
+      <input type="text" class="form-control mr-3" placeholder="教室名称" formControlName="searchName">
+      <input type="text" class="form-control mr-3" placeholder="容量" formControlName="searchCapacity">
       <button type="submit" class="btn btn-info"><i class="fas fa-search"></i>查询</button>
     </form>
   </div>
