--- a/schedule/src/app/student/add/add.component.html
+++ b/schedule/src/app/student/add/add.component.html
@@ -1,9 +1,8 @@
-<body class="container offset-4 mt-sm-5">
 <form [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup)">
   <div class="form-group row">
-    <label for="name" class="col-sm-2 text-right col-form-label"><code>*</code>姓名</label>
-    <div class="col-sm-4">
-      <input type="text" style="width: 153px" class="form-control" id="name" formControlName="name">
+    <label for="name" class="col-sm-4 text-right col-form-label"><code>*</code>姓名</label>
+    <div class="col-sm-8">
+      <input type="text" class="form-control mr-3" id="name" formControlName="name">
       <small class="text-danger" *ngIf="formGroup.get('name')!.touched && formGroup.get('name')!.invalid ">
         <span *ngIf="!formGroup.get('name')?.errors?.studentNameUnique">格式不正确</span>
         <span *ngIf="formGroup.get('name')?.errors?.studentNameUnique">学生名已存在</span>
@@ -11,8 +10,8 @@
     </div>
   </div>
   <div class="form-group row">
-    <label class="col-sm-2 text-right col-form-label"><code>*</code>性别</label>
-    <div class="col-sm-4 mt-2">
+    <label class="col-sm-4 text-right col-form-label"><code>*</code>性别</label>
+    <div class="col-sm-8 mt-2">
       <input [value]="false" type="radio"  name="sex" id="sex1" formControlName="sex">
       <label for="sex1">男</label> &nbsp;
       <input [value]="true" type="radio" name="sex" id="sex2" formControlName="sex">
@@ -20,9 +19,9 @@
     </div>
   </div>
   <div class="form-group row">
-    <label for="sno" class="col-sm-2 text-right col-form-label"><code>*</code>学号</label>
-    <div class="col-sm-4">
-      <input type="text" style="width: 153px" class="form-control" id="sno" formControlName="sno">
+    <label for="sno" class="col-sm-4 text-right col-form-label"><code>*</code>学号</label>
+    <div class="col-sm-8">
+      <input type="text" class="form-control col-sm-3" id="sno" formControlName="sno">
       <small class="text-danger" *ngIf="formGroup.get('sno')!.touched && formGroup.get('sno')!.invalid ">
         <span *ngIf="!formGroup.get('sno')?.errors?.snoUnique">格式不正确</span>
         <span *ngIf="formGroup.get('sno')?.errors?.snoUnique">学号已存在</span>
@@ -30,13 +29,13 @@
     </div>
   </div>
   <div class="form-group row">
-    <label for="clazz" class="col-sm-2 text-right col-form-label"><code>*</code>班级</label>
-    <div class="col-sm-4">
+    <label for="clazz" class="col-sm-4 text-right col-form-label"><code>*</code>班级</label>
+    <div class="col-sm-8">
       <app-clazz-select formControlName="clazzId" id="clazz"></app-clazz-select>
     </div>
   </div>
   <div class="form-group row">
-    <div class="col-sm-4">
+    <div class="offset-4">
       <a style="float: right" [routerLink]="'../'" class="btn btn-primary">返回</a>
       <button style="float: right" class="btn btn-primary" [disabled]="formGroup.invalid">
         <i class="fas fa-save"></i>保存
@@ -44,4 +43,3 @@
     </div>
   </div>
 </form>
-</body>
