--- a/schedule/src/app/student/student.component.html
+++ b/schedule/src/app/student/student.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-10">
     <form class="form-inline" (submit)="onSubmit(queryForm)" [formGroup]="queryForm">
-      <input type="text" class="form-control" style="margin-right: 10px" placeholder="学生姓名" formControlName="name">
-      <input type="text" class="form-control" style="margin-right: 10px" placeholder="学号" formControlName="sno">
+      <input type="text" class="form-control mr-3" placeholder="学生姓名" formControlName="name">
+      <input type="text" class="form-control mr-3" placeholder="学号" formControlName="sno">
       <button type="submit" class="btn btn-info"><i class="fas fa-search"></i>查询</button>
     </form>
   </div>
