--- a/schedule/src/app/teacher/edit/edit.component.html
+++ b/schedule/src/app/teacher/edit/edit.component.html
@@ -1,25 +1,24 @@
-<body class="container offset-4 mt-sm-5">
 <form [formGroup]="formGroup">
   <div class="form-group row">
-    <label class="col-sm-2 text-right col-form-label"><code>*</code>姓名</label>
-    <div class="col-sm-4">
-      <input type="text" class="form-control" style="width: 153px" formControlName="name">
+    <label class="col-sm-4 text-right col-form-label"><code>*</code>姓名</label>
+    <div class="col-sm-8">
+      <input type="text" class="form-control col-sm-3" formControlName="name">
       <!--      <small class="text-danger" *ngIf="formGroup.get('name')?.invalid">-->
       <!--        长度应该在2-25之间-->
       <!--      </small>-->
     </div>
   </div>
   <div class="form-group row">
-    <label class="col-sm-2 text-right col-form-label"><code>*</code>性别</label>
-    <div class="col-sm-4 mt-2">
+    <label class="col-sm-4 text-right col-form-label"><code>*</code>性别</label>
+    <div class="col-sm-8 mt-2">
       <input type="radio" name="sex" formControlName="sex" [value]="false" id="sex0" checked="checked" /><label>男</label>&nbsp;&nbsp;&nbsp;
       <input type="radio" name="sex" formControlName="sex" [value]="true" id="sex1" /><label>女</label>
     </div>
   </div>
   <div class="form-group row">
-    <label class="col-sm-2 text-right col-form-label"><code>*</code>手机号</label>
-    <div class="col-sm-4">
-      <input type="text" class="form-control" formControlName="phone" style="width: 153px" appValidatorClass>
+    <label class="col-sm-4 text-right col-form-label"><code>*</code>手机号</label>
+    <div class="col-sm-8">
+      <input type="text" class="form-control col-sm-3" formControlName="phone">
       <!--      <small class="text-danger" *ngIf="formGroup.get('number')?.errors">-->
       <!--        <ng-container *ngIf="formGroup.get('number')?.errors?.isPhoneNumber">手机号格式错误</ng-container>-->
       <!--        <ng-container *ngIf="formGroup.get('number')?.errors?.numberUnique">该手机号已存在</ng-container>-->
@@ -27,10 +26,9 @@
     </div>
   </div>
   <div class="form-group row">
-    <div class="col-sm-4">
+    <div class="offset-4">
       <a style="float: right" [routerLink]="'/teacher'" class="btn btn-primary">返回</a>
       <button style="float: right" type="submit" class="btn btn-primary" [disabled]="!formGroup.get('name')?.value || !formGroup.get('phone')?.value" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
     </div>
   </div>
 </form>
-</body>
