--- a/schedule/src/common/clazz-select/clazz-select.component.html
+++ b/schedule/src/common/clazz-select/clazz-select.component.html
@@ -1,4 +1,4 @@
-<select class="form-control" style="width: 153px" id="clazz" [formControl]="clazzSelected">
+<select class="form-control col-sm-3"  id="clazz" [formControl]="clazzSelected">
   <option [value]="null">请选择</option>
   <option *ngFor="let clazz of clazzes" [value]="clazz.id">
     {{clazz.name}}
