--- a/schedule/src/app/teacher/add/add.component.html
+++ b/schedule/src/app/teacher/add/add.component.html
@@ -3,9 +3,6 @@
     <label class="col-sm-4 text-right col-form-label"><code>*</code>姓名</label>
     <div class="col-sm-8">
       <input type="text" class="form-control col-sm-3" formControlName="name">
-<!--      <small class="text-danger" *ngIf="formGroup.get('name')?.invalid">-->
-<!--        长度应该在2-25之间-->
-<!--      </small>-->
     </div>
   </div>
   <div class="form-group row">
@@ -19,16 +16,16 @@
     <label class="col-sm-4 text-right col-form-label"><code>*</code>手机号</label>
     <div class="col-sm-8">
       <input type="text" class="form-control col-sm-3" formControlName="phone">
-<!--      <small class="text-danger" *ngIf="formGroup.get('number')?.errors">-->
-<!--        <ng-container *ngIf="formGroup.get('number')?.errors?.isPhoneNumber">手机号格式错误</ng-container>-->
-<!--        <ng-container *ngIf="formGroup.get('number')?.errors?.numberUnique">该手机号已存在</ng-container>-->
-<!--      </small>-->
+      <small class="text-danger" *ngIf="formGroup.get('phone')!.touched && formGroup.get('phone')!.invalid ">
+        <span *ngIf="!formGroup.get('phone')?.errors?.phoneUnique">格式不正确</span>
+        <span *ngIf="formGroup.get('phone')?.errors?.phoneUnique">手机号已存在</span>
+      </small>
     </div>
   </div>
   <div class="form-group row">
     <div class="offset-4">
       <a style="float: right" [routerLink]="'/teacher'" class="btn btn-primary">返回</a>
-      <button style="float: right" type="submit" class="btn btn-primary" [disabled]="!formGroup.get('name')?.value || !formGroup.get('phone')?.value" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
+      <button style="float: right" type="submit" class="btn btn-primary" [disabled]="formGroup.invalid" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
     </div>
   </div>
 </form>
