--- a/schedule/src/app/term/add/add.component.html
+++ b/schedule/src/app/term/add/add.component.html
@@ -17,6 +17,17 @@
   </div>
 
   <div class="form-group row">
+    <label for="endTime" class="col-sm-4 text-right col-form-label"><code>*</code>结束时间</label>
+    <div class="col-sm-8">
+      <app-date formControlName="endTime" id="endTime"></app-date>
+      <small class="text-danger" *ngIf="formGroup.get('startTime')!.valid && formGroup.get('endTime')!.valid &&
+      !isTimeRight">
+        结束时间必须晚于开始时间
+      </small>
+    </div>
+  </div>
+
+  <div class="form-group row">
     <label class="col-sm-4 text-right col-form-label"><code>*</code>是否激活</label>
     <div class="col-sm-8 mt-2">
       <input [value]="true" type="radio" name="state" id="1" formControlName="state">
