--- a/schedule/src/app/personal/edit/edit.component.html
+++ b/schedule/src/app/personal/edit/edit.component.html
@@ -6,13 +6,6 @@
     </div>
   </div>
   <div class="form-group row">
-    <label class="col-sm-4 text-right col-form-label"><code>*</code>性别</label>
-    <div class="col-sm-8 mt-2">
-      <input type="radio" name="sex" formControlName="sex" [value]="false" id="sex0" checked="checked" /><label>男</label>&nbsp;&nbsp;&nbsp;
-      <input type="radio" name="sex" formControlName="sex" [value]="true" id="sex1" /><label>女</label>
-    </div>
-  </div>
-  <div class="form-group row">
     <label class="col-sm-4 text-right col-form-label"><code>*</code>手机号</label>
     <div class="col-sm-8">
       <input type="text" class="form-control col-sm-3" formControlName="phone">
@@ -24,7 +17,7 @@
   </div>
   <div class="form-group row">
     <div class="offset-4">
-      <a style="float: right" [routerLink]="'/teacher'" class="btn btn-primary">返回</a>
+      <a style="float: right" [routerLink]="'../'" class="btn btn-primary">返回</a>
       <button style="float: right" type="submit" class="btn btn-primary" [disabled]="formGroup.invalid" (click)="onSubmit()">保存</button>&nbsp;&nbsp;
     </div>
   </div>
